# smart_doc_QA

./: .gitignore  README.md  example.txt  install_deps.sh  pyproject.toml  qa_history.jsonl  requirements.txt  run_all_tests.py  run_web_app.sh  smartqa.py  web_app.py
smartqa/: __init__.py  chunker.py  embedder.py  llm.py  logger.py  retriever.py
tests/: test_chunker.py  test_cli.py  test_embedder.py  test_llm.py  test_logger.py  test_retriever.py
