[tool.poetry]
name = "smart-doc-qa"
version = "0.1.0"
description = "Document question and answer system using embeddings and semantic search"
authors = ["EzeZungri <ezezungri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sentence-transformers = "^2.2.0"
faiss-cpu = "^1.7.0"
numpy = "^1.24.0"
requests = "^2.25.0"
streamlit = "^1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
